Fixed Bug with lost source-creators for monographs. Messages and Tooltips adjusted
Former-commit-id: 92cfb00f43fcbf215a2f85d543c8dce77ec52f71

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -123,15 +123,15 @@ IdTypeNotProvided = Bei einem Identifier fehlt der Typ.
 
 ImportNameNotProvided = Bitte geben Sie einen Namen f\u00FCr den Import an
 
-IncorrectClassification = Das eingegebene Stichwort entspricht nicht der angegebenen Klassifizierung.
+IncorrectClassification = Der eingegebene Wert entspricht nicht der angegebenen Klassifizierung.
 
-IncorrectDDCClassification = Das eingegebene Stichwort entspricht nicht der DDC-Klassifizierung.
+IncorrectDDCClassification = Der eingegebene Wert entspricht nicht der DDC-Klassifizierung.
 
-IncorrectMPIPKSClassification = Das eingegebene Stichwort entspricht nicht der MPI PKS-Klassifizierung. 
+IncorrectMPIPKSClassification = Der eingegebene Wert entspricht nicht der MPI PKS-Klassifizierung. 
 
-IncorrectMPISGroupsClassification = [NEW] Das eingegebene Stichwort entspricht nicht der MPIS-Gruppen-Klassifizierung. 
+IncorrectMPISGroupsClassification = Der eingegebene Wert entspricht nicht der MPIS-Gruppen-Klassifizierung. 
 
-IncorrectMPISProjectsClassification = Das eingegebene Stichwort entspricht nicht der MPIS-Projekt-Klassifizierung.
+IncorrectMPISProjectsClassification = Der eingegebene Wert entspricht nicht der MPIS-Projekt-Klassifizierung.
 
 LocatorIsNoUri = Die externe Referenz ist keine g\u00FCltige URL.
 
@@ -265,13 +265,13 @@ ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
-ViewItem_ssrnAddedSuccessfully = [NEW] Diese Publikation wurde für SSRN vorgeschlagen
+ViewItem_ssrnAddedSuccessfully = Publikation wurde f\u00FCr SSRN vorgeschlagen
 
-ViewItem_ssrnAddingProblem = [NEW] Diese Publikation konnte nicht für SSRN vorgeschlagen werden
+ViewItem_ssrnAddingProblem = Publikation konnte nicht für SSRN vorgeschlagen werden
 
-ViewItem_ssrnRemovedSuccessfully = [NEW] Diese Publikation wurde aus der Vorschlagsliste für SSRN entfernt
+ViewItem_ssrnRemovedSuccessfully = Publikation wurde aus der Vorschlagsliste f\u00FCr SSRN entfernt
 
-ViewItem_ssrnRemovingProblem = [NEW] Diese Publikation konnte nicht aus der Vorschlagsliste für SSRN entfernt werden
+ViewItem_ssrnRemovingProblem = Publikation konnte nicht aus der Vorschlagsliste f\u00FCr SSRN entfernt werden
 
 #
 # Yearbook
@@ -627,7 +627,7 @@ import_process_transformation_done = Die Transformation ist abgeschlossen
 
 import_process_validate = Validierung des Datensatzes
 
-itemHasBeenChangedInTheMeantime = Ein unerwarteter Fehler ist aufgetreten. Bitte wenden Sie sich an den PubMan Support.
+itemHasBeenChangedInTheMeantime = Ein unerwarteter Fehler ist aufgetreten. Bitte starten Sie die Eingabe erneut. Bei wiederholtem Auftreten melden Sie das Problem an den PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = Der Datensatz wurde nicht ge\u00E4ndert und somit auch nicht erneut abgespeichert.
@@ -696,7 +696,7 @@ searchResultList_QueryString = Ihre exakte Suche war:
 
 search_NoCriteria = Es wurden keine Suchkriterien angegeben. Bitte geben Sie Suchkriterien an.
 
-search_ParenthesisNotClosed = [NEW] Bitte schlie\u00DFen Sie ge\u00F6ffnete Klammern
+search_ParenthesisNotClosed = Bitte alle ge\u00F6ffneten Klammern schlie\u00DFen
 
 # Search Error
 search_ParseError = Der Suchausdruck enth\u00E4lt unzul\u00E4ssige Zeichen z. B. ", * oder ?
