--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -126,15 +126,15 @@ IdTypeNotProvided = An identifier is missing the type.
 
 ImportNameNotProvided = Please enter a name for the import
 
-IncorrectClassification = The entered keyword does not conform to the given classification.
+IncorrectClassification = The entered value is not conform to the given classification.
 
-IncorrectDDCClassification = The entered keyword does not conform to the DDC classification. 
+IncorrectDDCClassification = The entered value is not conform to the DDC classification. 
 
-IncorrectMPIPKSClassification = The entered keyword does not conform to the MPI PKS classification. 
+IncorrectMPIPKSClassification = The entered value is not conform to the MPI PKS classification. 
 
-IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
+IncorrectMPISGroupsClassification = The entered value is not conform to the MPIS group classification. 
 
-IncorrectMPISProjectsClassification = [NEW] The entered keyword does not conform to the MPIS project classification.
+IncorrectMPISProjectsClassification = The entered value is not conform to the MPIS project classification.
 
 LocatorIsNoUri = The external reference is no valid URL.
 
@@ -270,6 +270,15 @@ ViewItemFull_withdrawn = This item is discarded!
 # View Item
 #
 ViewItem_deleteConfirmation = Do you really want to delete this item?
+
+ViewItem_ssrnAddedSuccessfully = Publication has been suggested for SSRN
+
+ViewItem_ssrnAddingProblem = Publication couldn't be suggested for SSRN
+
+ViewItem_ssrnRemovedSuccessfully = Publication has been removed from the SSRN suggestion list
+
+ViewItem_ssrnRemovingProblem = Publication couldn't be removed from the SSRN suggestion list
+
 
 #
 # Yearbook
@@ -628,7 +637,7 @@ import_process_transformation_done = Transformation done
 
 import_process_validate = Validating item
 
-itemHasBeenChangedInTheMeantime = An unexpected error occurred. Please contact PubMan Support.
+itemHasBeenChangedInTheMeantime = An unexpected error occurred. Please restart the submission. In case of repeated occourence please inform the PubMan Support 
 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
@@ -697,7 +706,7 @@ searchResultList_QueryString = Your exact query was:
 
 search_NoCriteria = No search criteria have been provided. Please use valid search critera and repeat.
 
-search_ParenthesisNotClosed = [NEW] Please close opened parenthesis
+search_ParenthesisNotClosed = Please close all opened parenthesis
 
 # Search Error
 search_ParseError = Search expression contains illegal characters e. g. ", * or ? at first position.
