--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -110,11 +110,17 @@ GenreNotProvided = Por favor, especifique el G\u00E9nero.
 
 GenreNotSuitable = El g\u00E9nero seleccionado no est\u00E1 permitido en la actual colecci\u00F3n.
 
-ImportNameNotProvided = NEW: Please enter a name for the import
+ImportNameNotProvided = Please enter a name for the import
 
-IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
+IncorrectClassification = The entered value is not conform to the given classification.
 
-IncorrectMPISProjectsClassification = [NEW] The entered keyword does not conform to the MPIS project classification.
+IncorrectDDCClassification = The entered value is not conform to the DDC classification. 
+
+IncorrectMPIPKSClassification = The entered value is not conform to the MPI PKS classification. 
+
+IncorrectMPISGroupsClassification = The entered value is not conform to the MPIS group classification. 
+
+IncorrectMPISProjectsClassification = The entered value is not conform to the MPIS project classification.
 
 LocatorIsNoUri = La referencia externa no es una URL v\u00E1lida.
 
@@ -230,6 +236,14 @@ ViewItemFull_withdrawn = \u00A1Este item ha sido retirado!
 # View Item
 #
 ViewItem_deleteConfirmation = \u00BFEst\u00E1 seguro de que quiere eliminar este item?
+
+ViewItem_ssrnAddedSuccessfully = Publication has been suggested for SSRN
+
+ViewItem_ssrnAddingProblem = Publication couldn't be suggested for SSRN
+
+ViewItem_ssrnRemovedSuccessfully = Publication has been removed from the SSRN suggestion list
+
+ViewItem_ssrnRemovingProblem = Publication couldn't be removed from the SSRN suggestion list
 
 #
 # Yearbook
@@ -649,7 +663,7 @@ searchResultList_QueryString = Su interrogaci\u00F3n exacta ha sido:
 
 search_NoCriteria = No se ha proporcionado criterio de b\u00FAsqueda. Por favor utilice un criterio de b\u00FAsqueda v\u00E1lido y repita.
 
-search_ParenthesisNotClosed = [NEW] Please close opened parenthesis
+search_ParenthesisNotClosed = Please close all opened parenthesis
 
 # Search Error
 search_ParseError = La expresi\u00F3n de b\u00FAsqueda contiene caracteres ilegales ej. ", * or ? en posici\u00F3n inicial.
