--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -1014,6 +1014,10 @@ ViewItemFull_lblWithdrawn = Retirado
 
 ViewItemFull_lblnameOfCollection = Nombre de la Colecci\uFFFDn
 
+ViewItemFull_lblAddSsrn = Suggest for SSRN
+
+ViewItemFull_lblRemoveSsrn = Remove from SSRN suggestion list
+
 #
 #ViewItemLog
 #
