--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -1019,6 +1019,10 @@ ViewItemFull_lblWithdrawn = Withdrawn
 
 ViewItemFull_lblnameOfCollection = Name of Collection
 
+ViewItemFull_lblAddSsrn = Suggest for SSRN
+
+ViewItemFull_lblRemoveSsrn = Remove from SSRN suggestion list
+
 #
 #ViewItemLog
 #
