--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -130,11 +130,11 @@ IncorrectClassification = \u5206\u985E\u4F53\u7CFB\uFF08\u4E3B\u984C\uFF09\u306B
 
 IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
-IncorrectMPIPKSClassification = MPI PKS \u5206\u985E\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
+IncorrectMPIPKSClassification = MPI PKS \u5206\u985E\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002 
 
-IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
+IncorrectMPISGroupsClassification = The entered value is not conform to the MPIS group classification. 
 
-IncorrectMPISProjectsClassification = [NEW] The entered keyword does not conform to the MPIS project classification.
+IncorrectMPISProjectsClassification = The entered value is not conform to the MPIS project classification.
 
 LocatorIsNoUri = \u6307\u5B9A\u3057\u305F\u5916\u90E8URL\u306E\u6B63\u3057\u3044\u5F62\u5F0F\u3068\u306A\u3063\u3066\u3044\u307E\u305B\u3093\u3002
 
@@ -264,6 +264,14 @@ ViewItemFull_withdrawn = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u53D6\u308A\
 # View Item
 #
 ViewItem_deleteConfirmation = \u672C\u5F53\u306B\u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u524A\u9664\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
+
+ViewItem_ssrnAddedSuccessfully = Publication has been suggested for SSRN
+
+ViewItem_ssrnAddingProblem = Publication couldn't be suggested for SSRN
+
+ViewItem_ssrnRemovedSuccessfully = Publication has been removed from the SSRN suggestion list
+
+ViewItem_ssrnRemovingProblem = Publication couldn't be removed from the SSRN suggestion list
 
 #
 # Yearbook
@@ -693,7 +701,7 @@ searchResultList_QueryString = \u4EE5\u4E0B\u306E\u691C\u7D22\u5F0F\u304C\u5B9F\
 
 search_NoCriteria = \u691C\u7D22\u6761\u4EF6\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002\u691C\u7D22\u5F0F\u3092\u518D\u5EA6\u5165\u529B\u3057\u3066\u691C\u7D22\u3057\u76F4\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-search_ParenthesisNotClosed = [NEW] Please close opened parenthesis
+search_ParenthesisNotClosed = Please close all opened parenthesis
 
 # Search Error
 search_ParseError = \u691C\u7D22\u30AF\u30A8\u30EA\u306B\u8A31\u53EF\u3055\u308C\u306A\u3044\u6587\u5B57\uFF08 " * ? \u306A\u3069\uFF09\u304C\u542B\u307E\u308C\u3066\u3044\u307E\u3059\u3002
