--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -1021,6 +1021,10 @@ ViewItemFull_lblWithdrawn = Withdrawn
 
 ViewItemFull_lblnameOfCollection = Name of Collection
 
+ViewItemFull_lblAddSsrn = Suggest for SSRN
+
+ViewItemFull_lblRemoveSsrn = Remove from SSRN suggestion list
+
 #
 #ViewItemLog
 #
