SSRN Message edited
Former-commit-id: 354bb1948c7a7b0c9b986243618500a43c9b1dc1

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -267,7 +267,7 @@ ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
 ViewItem_ssrnAddedSuccessfully = Publikation wurde f\u00FCr SSRN vorgeschlagen
 
-ViewItem_ssrnAddingProblem = Publikation konnte nicht für SSRN vorgeschlagen werden
+ViewItem_ssrnAddingProblem = Publikation konnte nicht f\u00FCr SSRN vorgeschlagen werden
 
 ViewItem_ssrnRemovedSuccessfully = Publikation wurde aus der Vorschlagsliste f\u00FCr SSRN entfernt
 
