Changed label management
Former-commit-id: f25e770a66f29f6b84286e425897dd902d7a1bf2

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -410,7 +410,7 @@ ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
-ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
+ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex\u53C2\u7167ID
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
@@ -550,11 +550,11 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = \u95A2\u9023URL\u4ED
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
+ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = \u5236\u9650\u4ED8\u304D
+
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = \u975E\u516C\u958B
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PUBLIC = \u516C\u958B
-
-ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_AUDIENCE = \u5236\u9650\u4ED8\u304D
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_RESTRICTED = \u5236\u9650\u4ED8\u304D
 
@@ -604,7 +604,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = \u8FFD\u52A0
 
-EditItem_btAddFile = Add File(s)
+EditItem_btAddFile = \u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0...
 
 EditItem_btAddTitle = \u5225\u30BF\u30A4\u30C8\u30EB\u3092\u8FFD\u52A0
 
@@ -702,15 +702,15 @@ EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
 
-EditItem_lblItemDepositor = Created by
+EditItem_lblItemDepositor = \u767B\u9332\u8005: 
 
-EditItem_lblItemLatestModification = Last modification date
+EditItem_lblItemLatestModification = \u6700\u7D42\u66F4\u65B0
 
-EditItem_lblItemLatestModifier = Last modified by
+EditItem_lblItemLatestModifier = \u6700\u7D42\u66F4\u65B0: 
 
-EditItem_lblItemVersionID = Item ID: 
+EditItem_lblItemVersionID = \u30A2\u30A4\u30C6\u30E0ID: 
 
-EditItem_lblItemlatestChange = Created on
+EditItem_lblItemlatestChange = \u4F5C\u6210\u65E5
 
 EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9-URL
 
@@ -1024,7 +1024,7 @@ SearchResultList_lblItems = \u4EF6
 
 SearchResultList_lblNoHits = 0 \u4EF6
 
-SearchResultList_lblRestServiceExamplePage = Insert query in REST-Interface
+SearchResultList_lblRestServiceExamplePage = \u540C\u3058\u691C\u7D22\u6761\u4EF6\u3092\u4F7F\u3063\u3066\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u51FA\u529B
 
 #
 # SearchResultList
@@ -1082,41 +1082,41 @@ SubmitItem_lnkSubmit = \u767B\u9332
 #
 # Tools
 #
-ToolsPage = Tools
+ToolsPage = \u30C4\u30FC\u30EB
 
 Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = \u5178\u62E0\u60C5\u5831\u306E\u7BA1\u7406 (CoNE)
 
-Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = \u8457\u8005\u540D\u3001\u96D1\u8A8C\u540D\u3001\u8A00\u8A9E\u3001\u5206\u985E\u7B49\u306E\u540D\u79F0\u5178\u62E0\u60C5\u5831\u306E\u4E00\u89A7\u8868\u793A\u3068\u7BA1\u7406
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
 Tools_lblREST = REST
 
-Tools_lblRESTHead = Search and Export (REST-Interface)
+Tools_lblRESTHead = \u691C\u7D22\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u51FA\u529B (REST)
 
-Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via REST-Interface.
+Tools_lblRESTText = PubMan\u30C7\u30FC\u30BF\u3092\u5916\u90E8\u30B7\u30B9\u30C6\u30E0\u3068\u7D71\u5408\u3059\u308B\u305F\u3081\u306B\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u51FA\u529B\u306E\u64CD\u4F5C\u304C\u53EF\u80FD\u3067\u3059\u3002
 
 Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = SWORD-Interface
+Tools_lblSWORDHead = SWORD\u30B5\u30FC\u30D3\u30B9
 
-Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = \u5916\u90E8\u30B5\u30FC\u30D0\u304B\u3089\u81EA\u52D5\u767B\u9332\u3059\u308B\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
 
-Tools_lblTools = Tools
+Tools_lblTools = \u30C4\u30FC\u30EB
 
 Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
+Tools_lblUnAPIHead = \u30C7\u30FC\u30BF\u53D6\u5F97\u30B5\u30FC\u30D3\u30B9 (unAPI)
 
-Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
+Tools_lblUnAPIText = arXiv, BioMed Central, PubMed Central, Spires\u7B49\u306E\u5916\u90E8\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u304B\u3089\u6587\u732E\u30C7\u30FC\u30BF\u3092\u53D6\u5F97\u3067\u304D\u307E\u3059\u3002
 
-Tools_lblValidationService = Validation service
+Tools_lblValidationService = \u30C7\u30FC\u30BF\u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
-Tools_lblValidationServiceHead = Validation service
+Tools_lblValidationServiceHead = \u30C7\u30FC\u30BF\u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
-Tools_lblValidationServiceText = Check your XML data for formal correctness.
+Tools_lblValidationServiceText = \u5165\u529B\u3057\u305F\u6587\u732EXML\u30C7\u30FC\u30BF\u306E\u5185\u5BB9\u304C\u3042\u3063\u3066\u3044\u308B\u304B\u691C\u8A3C\u3057\u307E\u3059\u3002
 
 #
 # UserAccountOptions
@@ -1208,7 +1208,7 @@ ViewItemFull_lblFileLicense = CC\u30E9\u30A4\u30BB\u30F3\u30B9
 
 ViewItemFull_lblFileLicenseShow = \u5225\u30A6\u30A3\u30F3\u30C9\u30A6\u3067\u30E9\u30A4\u30BB\u30F3\u30B9\u60C5\u5831\u3092\u898B\u308B
 
-ViewItemFull_lblFileMimeTypeSize = MIME-Type / Checksum
+ViewItemFull_lblFileMimeTypeSize = MIME\u30BF\u30A4\u30D7 \uFF0F \u30C1\u30A7\u30C3\u30AF\u30B5\u30E0
 
 ViewItemFull_lblFileName = \u30D5\u30A1\u30A4\u30EB\u540D
 
@@ -1248,7 +1248,7 @@ ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
-ViewItemFull_lblLatestVersion = \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+ViewItemFull_lblLatestVersion = \u6700\u65B0\u7248
 
 ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
@@ -1392,19 +1392,19 @@ ViewItemLog_lblAssignVersionPid = \u30D0\u30FC\u30B8\u30E7\u30F3PID\u4ED8\u4E0E\
 
 ViewItemLog_lblComment = \u8AAC\u660E:
 
-ViewItemLog_lblCreate = \u4F5C\u6210\u65E5
+ViewItemLog_lblCreate = \u4F5C\u6210\u65E5\u6642
 
 ViewItemLog_lblInRevision = \u5DEE\u3057\u623B\u3057
 
 ViewItemLog_lblItemLog = \u6587\u732E\u60C5\u5831\u306E\u5C65\u6B74
 
-ViewItemLog_lblRelease = \u516C\u958B\u65E5
+ViewItemLog_lblRelease = \u516C\u958B\u65E5\u6642
 
-ViewItemLog_lblSubmit = \u767B\u9332\u65E5
+ViewItemLog_lblSubmit = \u767B\u9332\u65E5\u6642
 
-ViewItemLog_lblUpdate = \u66F4\u65B0\u65E5 
+ViewItemLog_lblUpdate = \u66F4\u65B0\u65E5\u6642
 
-ViewItemLog_lblWithdraw = \u53D6\u308A\u4E0B\u3052\u65E5
+ViewItemLog_lblWithdraw = \u53D6\u308A\u4E0B\u3052\u65E5\u6642
 
 ViewItemMedium_lblAffiliations = \u6240\u5C5E
 
@@ -2015,7 +2015,7 @@ adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 adv_search_lblClassification = \u5206\u985E
 
 #Event
-adv_search_lblEventInvited = Invited
+adv_search_lblEventInvited = \u62DB\u5F85\u8B1B\u6F14
 
 adv_search_lblFile = Files
 
@@ -2023,7 +2023,7 @@ adv_search_lblFileAvailable = with File(s)
 
 adv_search_lblFileAvailable_NO = No
 
-adv_search_lblFileAvailable_WHATEVER = Whatever
+adv_search_lblFileAvailable_WHATEVER = -
 
 adv_search_lblFileAvailable_YES = Yes
 
@@ -2110,9 +2110,9 @@ all = \u5168\u3066\u3092\u9078\u629E
 
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
-chooseWorkspace_descImportWorkspace = Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
+chooseWorkspace_descImportWorkspace = PubMan\u3078\u306E\u4E00\u62EC\u767B\u9332\u72B6\u6CC1\u3092\u78BA\u8A8D\u3057\u3001\u5BFE\u8C61\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u62EC\u3067\u524A\u9664\u3057\u305F\u308A\u516C\u958B\u3057\u305F\u308A\u3067\u304D\u307E\u3059\u3002
 
-chooseWorkspace_descQAWorkspace = In this area, moderators can view and work on all of their institute's publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status "pending" or "discarded" are not available at this point.
+chooseWorkspace_descQAWorkspace = \u767B\u9332\u30A2\u30A4\u30C6\u30E0\u3092\u7DE8\u96C6\u3001\u78BA\u8A8D\u3067\u304D\u307E\u3059\u3002\u7BA1\u7406\u8005\u767B\u9332\u3055\u308C\u3066\u3044\u308B\u5834\u5408\u306F\u3001\u767B\u9332\u8005\u306B\u5DEE\u3057\u623B\u3057\u305F\u308A\u3001\u516C\u958B\u51E6\u7406\u3092\u884C\u3046\u3053\u3068\u3082\u53EF\u80FD\u307E\u3059\u3002
 
 chooseWorkspace_descReportWorkspace = Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
@@ -2714,7 +2714,7 @@ styleTheme_lblHighContrast = \u30B3\u30F3\u30C8\u30E9\u30B9\u30C8
 #STYLE THEMES
 styleTheme_lblPubMan = \u30D6\u30EB\u30FC
 
-styleTheme_lblSpecial = Special
+styleTheme_lblSpecial = \u30B9\u30DA\u30B7\u30E3\u30EB
 
 submission_descEasySubmission = \u30B9\u30C6\u30C3\u30D7\u30D0\u30A4\u30B9\u30C6\u30C3\u30D7\u3067\u30A2\u30A4\u30C6\u30E0\u3092\u767B\u9332\u3057\u3066\u3044\u304F\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002\u306F\u3058\u3081\u306E\u3046\u3061\u306F\u3053\u3061\u3089\u3092\u4F7F\u3046\u3053\u3068\u3092\u63A8\u5968\u3057\u307E\u3059\u3002
 
