- Resolved [PUBMAN-2553] - View Item: the permalink of attached files shoud be hided when the visibility is private or restricted - removed [NEW]-Tag from Tooltips
Former-commit-id: 1eb4d92f7f5b1b76a99bac0ba82f5c77720fd947

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -2039,11 +2039,11 @@ submission_lblSubmissionStart = Choose Submission Method
 
 submission_lnkEasySubmission = Easy Submission
 
-submission_lnkImport = [NEW] Fetch
+submission_lnkImport = Fetch
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = [NEW] IMPORT
+submission_lnkMultipleImport = IMPORT
 
 submission_lnkNewSubmission = Full Submission
 
