PUBMAN-2523 fixed: Encoding of Export to pdf is not capable of handling japanese (may also other) characters
Former-commit-id: ac53af38955074b0d1d43d7df8413b6b3b8dc209

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -828,6 +828,8 @@ Export_ExportFormat_AJP = AJP
 
 Export_ExportFormat_APA = APA
 
+Export_ExportFormat_APA_CJK = APA (Chin.-Jap.-Korean)
+
 Export_ExportFormat_BIBTEX = BibTeX
 
 # Test citation styles
