--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -828,6 +828,8 @@ Export_ExportFormat_AJP = AJP
 
 Export_ExportFormat_APA = APA
 
+Export_ExportFormat_APA_CJK = APA (Chin.-Jap.-Korean)
+
 Export_ExportFormat_BIBTEX = BibTeX
 
 # Test citation styles
