--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -821,6 +821,8 @@ Export_ExportFormat_AJP = AJP
 
 Export_ExportFormat_APA = APA
 
+Export_ExportFormat_APA_CJK = APA (Chin.-Jap.-Korean)
+
 Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
