PUBMAN-2506 fixed: Advanced search: the name of genre "Contribution to a Collected Edition" is cut
Former-commit-id: 094cc98748e414ac97ff6e4704a81354f8c86363

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -351,19 +351,19 @@ ENUM_GENRE_CONFERENCE_PAPER = Conference Paper
 ENUM_GENRE_CONFERENCE_REPORT = Conference Report
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to Collected Edition 
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to Commentary
 
 # kind of Book, source Encyclopedia
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to Encyclopedia 
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to Festschrift
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to Handbook
 
 ENUM_GENRE_COURSEWARE_LECTURE = Teaching
 
@@ -2686,7 +2686,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items\u0009
+search_lblSearch = Search released items\t
 
 skip_to_mainMenu = Skip to Main Menu
 
