Resolved [PUBMAN-2556] - Apostrophe in System Messages of User Account Information
Former-commit-id: ad2a7e4aa7c00b6d549b6bea6f73ec0639dd2ed2

--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -724,7 +724,7 @@ userAccountOptions_PasswordUpdated = Password changed!
 #
 userAccountOptions_UserInformation = Overview over the user account
 
-userAccountOptions_emptyPassword = Your password couldn9t be updated, because it was empty!
+userAccountOptions_emptyPassword = Your password couldn't be updated, because it was empty!
 
 #
 # Common
