Resolved [PUBMAN-2549] - Basket: content menu hover in basket is not displayed
Former-commit-id: 46a62ea6f4bd2fde1119ac90e6b96aacb445b6b2

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -697,6 +697,8 @@ List_btGo = Gehe zur ausgew\u00E4hlten Seite
 
 List_lblAddToBasket = Zur Ablage hinzuf\u00FCgen
 
+List_lblRemoveFromBasket = Aus Ablage entfernen
+
 List_lblBibList = Bibliographische Liste
 
 List_lblExportOptions = Exportieren
