--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -699,6 +699,8 @@ List_btGo = Go to selected page
 
 List_lblAddToBasket = Add To Basket
 
+List_lblRemoveFromBasket = Remove From Basket
+
 List_lblBibList = Bibliographic List
 
 List_lblExportOptions = Export
