--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -698,6 +698,8 @@ List_btGo = Ir a p\uFFFDgina seleccionada
 
 List_lblAddToBasket = A\uFFFDadir a la  Cesta
 
+List_lblRemoveFromBasket = [NEW] Remove From Basket
+
 List_lblExportOptions = Exportar
 
 # Menu
