--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -698,6 +698,8 @@ List_btGo = \u6307\u5B9A\u30DA\u30FC\u30B8\u306B\u79FB\u52D5\u3059\u308B
 
 List_lblAddToBasket = \u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3059\u308B
 
+List_lblRemoveFromBasket = [NEW] Remove From Basket
+
 List_lblBibList = \u30EA\u30B9\u30C8\u5F62\u5F0F\u3067\u8868\u793A
 
 List_lblExportOptions = \u30D5\u30A1\u30A4\u30EB\u306B\u4FDD\u5B58\u3059\u308B
