--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -457,6 +457,8 @@ ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
 ENUM_IMPORT_FORMAT_BIBTEX = BibTeX
 
+ENUM_IMPORT_FORMAT_BMC = BMC
+
 ENUM_IMPORT_FORMAT_EDOC = eDoc
 
 ENUM_IMPORT_FORMAT_EDOCAEI = eDoc AEI
@@ -470,6 +472,10 @@ ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_MARC = MARC21
+
+ENUM_IMPORT_FORMAT_MARC21 = Marc21
+
+ENUM_IMPORT_FORMAT_MARCXML = MarcXML
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
@@ -823,6 +829,10 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
+
+Export_ExportFormat_MARC21 = Marc21
+
+Export_ExportFormat_MARCXML = MarcXML
 
 Export_ExportFormat_TEST = TEST
 
@@ -2668,7 +2678,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items\t
+search_lblSearch = Search released items\u0009
 
 skip_to_mainMenu = Skip to Main Menu
 
