--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -438,6 +438,8 @@ ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
 ENUM_IMPORT_FORMAT_BIBTEX = BibTeX
 
+ENUM_IMPORT_FORMAT_BMC = BMC
+
 ENUM_IMPORT_FORMAT_EDOC = eDoc
 
 ENUM_IMPORT_FORMAT_EDOCAEI = eDoc AEI
@@ -451,6 +453,10 @@ ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_MARC = MARC21
+
+ENUM_IMPORT_FORMAT_MARC21 = Marc21
+
+ENUM_IMPORT_FORMAT_MARCXML = MarcXML
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
@@ -803,6 +809,10 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_ExportFormat_JUS = JUS
+
+Export_ExportFormat_MARC21 = Marc21
+
+Export_ExportFormat_MARCXML = MarcXML
 
 Export_ExportFormat_TEST = TEST
 
