PUBMAN-2543 fixed: Submission: after clicking on "fetch" the easy submission displayed in breadcrumb
Former-commit-id: e938fdea66111940655a184188832fab50ccdf5a

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -861,7 +861,7 @@ Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisati
 #
 Feed_Recent_Releases = Neu PubMan Eintr\u00E4ge
 
-FetchMetadataPage = Import
+FetchMetadataPage = Daten abholen
 
 #
 # Orientierungstexts (Sub-Header)
