--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -861,7 +861,7 @@ Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit
 #
 Feed_Recent_Releases = Recent Releases
 
-FetchMetadataPage = Import
+FetchMetadataPage = Fetch
 
 #
 # Orientierungstexts (Sub-Header)
