--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -852,7 +852,7 @@ Feed_OrgUnit_Recent_Releases = Unidades Organizativas recientemente publicadas
 #
 Feed_Recent_Releases = Items hechos p\u00FAblicos recientemente
 
-FetchMetadataPage = Traer
+FetchMetadataPage = Fetch
 
 #
 # Orientierungstexts (Sub-Header)
