--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -841,7 +841,7 @@ Feed_OrgUnit_Recent_Releases = \u7D44\u7E54\u306E\u6700\u65B0\u516C\u958B\u30A2\
 #
 Feed_Recent_Releases = \u6700\u65B0\u516C\u958B\u30A2\u30A4\u30C6\u30E0
 
-FetchMetadataPage = \u30E1\u30BF\u30C7\u30FC\u30BF\u306E\u53D6\u5F97
+FetchMetadataPage = Fetch
 
 #
 # Orientierungstexts (Sub-Header)
