showing technical metadata by JhoveHandler
Former-commit-id: 7c691b420c352714e0b768439a39759aeacf80b2

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1380,6 +1380,8 @@ ViewItemFull_lblTOC = Inhaltsverzeichnis
 
 ViewItemFull_lblTagName = Name des Tags
 
+ViewItemFull_lblTechnicalMetadata = Technische Metadaten
+
 ViewItemFull_lblTitle = Titel
 
 ViewItemFull_lblVersion = Version
