--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1383,6 +1383,8 @@ ViewItemFull_lblTOC = Table of Contents
 
 ViewItemFull_lblTagName = Name of Tag
 
+ViewItemFull_lblTechnicalMetadata = Technical Metadata
+
 ViewItemFull_lblTitle = Title
 
 ViewItemFull_lblVersion = Version
