--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -1368,6 +1368,8 @@ ViewItemFull_lblTOC = \u00CDndice de Contenidos
 
 ViewItemFull_lblTagName = Nombre de la etiqueta
 
+ViewItemFull_lblTechnicalMetadata = Technical Metadata
+
 ViewItemFull_lblTitle = T\u00EDtulo
 
 ViewItemFull_lblVersion = Versi\u00F3n
