--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1357,6 +1357,8 @@ ViewItemFull_lblTOC = \u76EE\u6B21
 
 ViewItemFull_lblTagName = \u30BF\u30B0\u540D
 
+ViewItemFull_lblTechnicalMetadata = Technical Metadata
+
 ViewItemFull_lblTitle = \u30BF\u30A4\u30C8\u30EB
 
 ViewItemFull_lblVersion = \u30D0\u30FC\u30B8\u30E7\u30F3
