new OverviewPage added
Former-commit-id: e36411e7208148af7f08f80e0e02e8a9267e0fdd

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -274,6 +274,21 @@ ViewItem_ssrnRemovedSuccessfully = Publikation wurde aus der Vorschlagsliste f\u
 ViewItem_ssrnRemovingProblem = Publikation konnte nicht aus der Vorschlagsliste f\u00FCr SSRN entfernt werden
 
 #
+# ViewItemOverview
+#
+ViewItemOverview_noAbstractAvailable = [NEW] Es sind keine Zusammenfassungen verf\u00FCgbar
+
+ViewItemOverview_noExternalResourcesAvailable = [NEW] Es sind keine Externen Ressourcen verf\u00FCgbar
+
+ViewItemOverview_noFulttextsAvailable = [NEW] Es sind keine Volltexte verf\u00FCgbar
+
+ViewItemOverview_noMpgAuthorsAvailable = [NEW] Es sind keine MPG-Autoren in der Publikation vorhanden
+
+ViewItemOverview_noSupplementaryMaterialAvailable = [NEW] Es sind keine Erg\u00E4nzenden Materialien verf\u00FCgbar
+
+
+
+#
 # Yearbook
 #
 Yearbook_AddedItemsToYearbook = Datensatz/Datens\u00E4tze zum Jahrbuch hinzugef\u00FCgt
