--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -246,6 +246,19 @@ ViewItem_ssrnRemovedSuccessfully = Publication has been removed from the SSRN su
 ViewItem_ssrnRemovingProblem = Publication couldn't be removed from the SSRN suggestion list
 
 #
+# ViewItemOverview
+#
+ViewItemOverview_noAbstractAvailable = [NEW] There is no abstract available
+
+ViewItemOverview_noExternalResourcesAvailable = [NEW] There is no external resource available
+
+ViewItemOverview_noFulttextsAvailable = [NEW] There is no fulltext available
+
+ViewItemOverview_noMpgAuthorsAvailable = [NEW] There are no MPG-Authors available
+
+ViewItemOverview_noSupplementaryMaterialAvailable = [NEW] There is no supplementary material available
+
+#
 # Yearbook
 #
 Yearbook_AddedItemsToYearbook = Item(s) added to yearbook
