--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1149,6 +1149,25 @@ UserAccountOptions_lblNewPassword = Neues Passwort
 UserAccountOptions_lblRepeatNewPassword = Passwort wiederholen
 
 #
+# ViewItemOverview
+#
+viewItemOverviewPage = Datensatz \u00DCbersicht
+
+ViewItemOverview_lblMpgAuthorsSection = [NEW] MPG-Autoren
+
+ViewItemOverview_lblAbstractSection = [NEW] Zusammenfassung
+
+ViewItemOverview_lblCitationSection = [NEW] Zitation
+
+ViewItemOverview_lblExternalResourceSection = [NEW] Externe Ressourcen
+
+ViewItemOverview_lblFulltextSection = [NEW] Volltexte
+
+ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Erg\u00E4nzendes Material
+
+ViewItemOverview_lblLinkOverviewPage = [NEW] \u00DCbersicht
+
+#
 # ViewItemFull
 #
 ViewItemFull_btnFileSection = Dateien
@@ -1736,6 +1755,7 @@ ViewItem_lnkTocMore = aufklappen...
 ViewLocalTagsPage = Lokale Tags
 
 WithdrawItemPage = Datensatz verwerfen
+
 
 #
 # JUS-specific labels END
