--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1126,6 +1126,25 @@ UserAccountOptions_lblNewPassword = New password
 UserAccountOptions_lblRepeatNewPassword = Repeat password
 
 #
+# ViewItemOverview
+#
+viewItemOverviewPage = Item Overview
+
+ViewItemOverview_lblMpgAuthorsSection = [NEW] MPG-Authors
+
+ViewItemOverview_lblAbstractSection = [NEW] Abstract
+
+ViewItemOverview_lblCitationSection = [NEW] Citation
+
+ViewItemOverview_lblExternalResourceSection = [NEW] External Resource
+
+ViewItemOverview_lblFulltextSection = [NEW] Fulltext
+
+ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Supplementary Material
+
+ViewItemOverview_lblLinkOverviewPage = [NEW] Overview
+
+#
 # ViewItemFull
 #
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
