--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1167,6 +1167,24 @@ ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Erg\u00E4nzendes Materi
 
 ViewItemOverview_lblLinkOverviewPage = [NEW] \u00DCbersicht
 
+ViewItemOverview_lblCiteAs = [NEW] Zitierlink
+
+ViewItemOverview_lblGenreGroup_book = [NEW] Geschlossenes Werk
+
+ViewItemOverview_lblGenreGroup_part_of_book = [NEW] Teil eines geschlossenen Werks
+
+ViewItemOverview_lblGenreGroup_presentation_or_teaching = [NEW] Pr\u00E4sentation/Lehrmaterial
+
+ViewItemOverview_lblGenreGroup_legal_stuff = [NEW] Juristisches Zeug
+
+ViewItemOverview_lblGenreGroup_series_or_journal = [NEW] Reihe/Journal
+
+ViewItemOverview_lblGenreGroup_article = [NEW] Artikel
+
+ViewItemOverview_lblGenreGroup_paper = [NEW] Kurzes eigentst\u00E4ndiges Werk
+
+ViewItemOverview_lblGenreGroup_other = [NEW] Sonstiges
+
 #
 # ViewItemFull
 #
