--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1167,6 +1167,24 @@ ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Supplementary Material
 
 ViewItemOverview_lblLinkOverviewPage = [NEW] Overview
 
+ViewItemOverview_lblCiteAs = [NEW] Cite as
+
+ViewItemOverview_lblGenreGroup_book = [NEW] Book
+
+ViewItemOverview_lblGenreGroup_part_of_book = [NEW] Part of Book
+
+ViewItemOverview_lblGenreGroup_presentation_or_teaching = [NEW] Presentation/Teaching
+
+ViewItemOverview_lblGenreGroup_legal_stuff = [NEW] Legal Stuff
+
+ViewItemOverview_lblGenreGroup_series_or_journal = [NEW] Series/Journal
+
+ViewItemOverview_lblGenreGroup_article = [NEW] Article
+
+ViewItemOverview_lblGenreGroup_paper = [NEW] Paper
+
+ViewItemOverview_lblGenreGroup_other = [NEW] Other
+
 #
 # ViewItemFull
 #
