--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -1155,6 +1155,8 @@ ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Supplementary Material
 
 ViewItemOverview_lblLinkOverviewPage = [NEW] Overview
 
+ViewItemOverview_lblCiteAs = [NEW] Cite as
+
 #
 # ViewItemFull
 #
