--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1144,6 +1144,8 @@ ViewItemOverview_lblSupplementaryMaterialSection = [NEW] Supplementary Material
 
 ViewItemOverview_lblLinkOverviewPage = [NEW] Overview
 
+ViewItemOverview_lblCiteAs = [NEW] Cite as
+
 #
 # ViewItemFull
 #
